--- a/week02/styles/box-model.css
+++ b/week02/styles/box-model.css
@@ -1,15 +1,30 @@
 .callout {
-	
+    max-width: 400px;
+    margin: 10px;
+    border: 0;
+    padding: 15px;
+	background-color: #247;
+    color: white;
 }
 
 .callout img {
-	
+	float: right;
+    margin: 0 0 10px 15px;
+    border: 1px solid black;
+    padding: 3px;
+    background-color: antiquewhite;
+    width: 100px;
+    height: auto;
 }
 
 blockquote {
-	
+	margin: 10px;
 }
 
 cite {
-	
+    display: block;
+    border-top: 1px dotted white;
+    padding-top: 5px;
+    text-align: right;
+    font-size: 12px;
 }
