--- a/styles/styles.css
+++ b/styles/styles.css
@@ -2,21 +2,50 @@ nav {
     background-color: darkblue;
     padding: 10px;
 }
+
 nav a {
     color: white;
     display: block;
     padding: 20px;
 }
+
+main {
+    max-width: 840px;
+}
+
 h1 {
     color: darkblue;
 }
-img {
-    width: 150;
+
+main img {
+    width: 150px;
     height: auto;
     border: 1px solid black;
     padding: 2px;
     box-shadow: 0 0 30px gray;
 }
+
 p {
+    padding: 0;
+}
+
+aside {
+    width: 500px;
+    margin: 10px;
+    border: 1px solid rgb(0, 0, 0 / 0.2);
     padding: 10px;
+    background-color: rgb(200, 224, 246);
+    color: black;
+    text-align: center;
+}
+
+aside img {
+    width: 200px;
+    height: auto;
+}
+
+footer {
+    margin-top: 10px;
+    border-top: 1px solid rgb(0, 0, 0);
+    text-align: center;
 }
