--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -3,6 +3,7 @@
     --title-color: navy;
     --heading-font: "Times New Roman", "Georgia", serif;
     --body-font: Arial, Helvetica, sans-serif;
+    --font-color: #000;
 }
 
 * {
@@ -13,7 +14,7 @@
 
 body {
     font-family: var(--body-font);
-    color: #000;
+    color: var(--font-color);
 }
 
 header, main, footer {
@@ -23,7 +24,7 @@ header, main, footer {
 
 h1, h2 {
     font-family: var(--heading-font);
-    color: #000;
+    color: var(--title-color);
 }
 
 nav, p, section, article {
@@ -53,7 +54,7 @@ h1 {
     text-align: center;
     opacity: 0.7;
     background-color: var(--primary-color);
-    color: #000;
+    color: var(--font-color);
 }
 
 article {
@@ -62,7 +63,7 @@ article {
     margin: 5px;
     padding: 0;
     background-color: var(--primary-color);
-    color: #000;
+    color: var(--font-color);
 }
 
 .hero article img {
