--- a/week04/styles/layout-exercises.css
+++ b/week04/styles/layout-exercises.css
@@ -23,19 +23,22 @@ div {
 
 .flex {
     background-color: #aba;
-    /* write declarations here */
-
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .grid {
     background-color: #abb;
-    /* enter declarations here */
-
+    display: grid;
+    align-items: center;
+    justify-content: center;
 }
 
 .container2 {
-    /* write declarations here */
-
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
 }
 
 .two {
@@ -44,13 +47,13 @@ div {
 }
 
 .container3 {
-    /* write declarations here */
-
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(3, 1fr);
 }
 
 .columns-3 {
-    /* write declaration here */
-
+    grid-column: 1 / 4;
 }
 
 .three {
