--- a/styles/styles.css
+++ b/styles/styles.css
@@ -5,6 +5,11 @@
     --transparent-border: 1px solid rgb(0 0 0 / 0.2);
 }
 
+header, .grid, footer {
+    max-width: 840px;
+    margin: 0 auto;
+}
+
 * {
     margin: 0;
     padding: 0;
@@ -16,15 +21,26 @@ nav {
     padding: var(--padding);
 }
 
+nav ul {
+    display: flex;
+    list-style: none;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
 nav a {
     color: white;
     display: block;
     padding: var(--padding);
+    text-decoration: none;
+    font-size: larger;
 }
 
 h1 {
     color: var(--nav-color);
     padding: .5rem;
+    border-bottom: 1px solid #222;
+    font-size: 1.5rem;
 }
 
 main {
@@ -32,24 +48,25 @@ main {
 }
 
 main img {
-    width: 150px;
+    width: 125px;
     height: auto;
+    margin: .5rem;
     border: var(--solid-border);
     padding: 2px;
     box-shadow: 0 0 30px gray;
     float: right;
-    margin: 0 0 1rem 1rem;
 }
 
 p {
-    margin: 1rem;
     padding: var(--padding);
 }
 
 aside {
-    width: 500px;
+    width: 400px;
     text-align: center;
     position: relative;
+    grid-column: 1/2;
+    grid-row: 1/2;
 }
 
 aside img {
@@ -60,7 +77,7 @@ aside img {
 aside h2 {
     position: absolute;
     top: 25px;
-    left: 200px;
+    left: 150px;
 }
 
 footer {
@@ -71,7 +88,6 @@ footer {
 
 /* "Class Selectors" */
 .box {
-    margin: 1rem;
     border: var(--transparent-border);
     padding: 1rem;
     background-color: #eee;
@@ -80,4 +96,12 @@ footer {
 
 .indent {
     padding-left: 2rem;
+}
+
+.grid {
+    margin: .5rem;
+    display: grid;
+    align-items: center;
+    grid-gap: 1rem;
+    grid-template-columns: 1fr 1fr;
 }
